--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         }
 
         .btn-primary:hover {
-            background-color: #ffffff;
+            background: #ffffff;
             color: #000000;
             transform: translateY(-3px);
             box-shadow: 0 18px 45px rgba(0, 0, 0, 0.24);
@@ -379,7 +379,7 @@
             height: 100%;
             border-radius: 1px;
             overflow: hidden;
-            transform: perspective(1200px) rotateY(-5deg) rotateX(1.5deg) rotateZ(-0.5deg);
+            transform: none;
             transform-origin: center;
             transition: transform 0.45s ease, box-shadow 0.45s ease;
             box-shadow: 0 24px 70px rgba(0, 0, 0, 0.24);
@@ -412,7 +412,7 @@
         }
 
         .hero-image:hover .hero-image-frame {
-            transform: perspective(1200px) rotateY(-6deg) rotateX(2deg) rotateZ(-0.6deg) translateY(-2px);
+            transform: translateY(-2px);
             box-shadow: 0 28px 80px rgba(0, 0, 0, 0.26);
         }
 
@@ -1453,11 +1453,11 @@
                 <div class="pricing-grid">
                     <div class="pricing-item">
                         <span class="pricing-name">Knippen</span>
-                        <span class="pricing-price">28€</span>
+                        <span class="pricing-price">25€</span>
                     </div>
                     <div class="pricing-item">
                         <span class="pricing-name">Knippen + Baard</span>
-                        <span class="pricing-price">33€</span>
+                        <span class="pricing-price">30€</span>
                     </div>
                     <div class="pricing-item">
                         <span class="pricing-name">Permanent Krullenbehandeling</span>
@@ -1545,12 +1545,12 @@
                     </div>
                     <p>Waar vakmanschap en stijl samenkomen. Wij leveren premium kapper diensten met persoonlijke aandacht en moderne technieken.</p>
                     <div class="footer-social">
-                        <a href="#" aria-label="Instagram">
+                        <a href="https://www.instagram.com/fadezstudio.nl" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                             </svg>
                         </a>
-                        <a href="#" aria-label="TikTok">
+                        <a href="https://www.tiktok.com/@fadezstudio.nl" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"/>
                             </svg>
