--- a/index.html
+++ b/index.html
@@ -1580,7 +1580,7 @@
                     <h4>Contact</h4>
                     <ul>
                         <li><a href="tel:+31681826171">+31 681826171</a></li>
-                        <li><a href="mailto:Fadezstudio@outlook.com">Fadezstudio@outlook.com</a></li>
+                        <li><a href="mailto:fadezstudio1@outlook.com">fadezstudio1@outlook.com</a></li>
                         <li>Nobelstraat 54</li>
                         <li>3231 BD Brielle</li>
                     </ul>
